--- a/training.html
+++ b/training.html
@@ -180,8 +180,27 @@ permalink: /training/
                         Workshops
                     </li>
                 </ol>
-                <p>We are available to facilitate your workshop or webinar. Here are some examples of events we've taken part in previously.</p>
-                <h2>Workshops</h2>
+                <p>Please see the list of upcoming events below.</p>
+
+                <h2>Upcoming Events</h2>
+
+                <h3>Funding & Opportunities for E-commerce - via Zoom</h3>
+                <p>Wednesday 14 May 2025, 11am to 12pm BST.</p>
+
+                <p>Join our online workshop to gain insights into various sources of funding and potential grants, loans and other opportunities that can help you grow your business. In this workshop you will learn about e-commerce platforms and gain awareness and knowledge on how to identify areas for development. You will also be equipped with the necessary tools to identify potential sources of funding and learn more about funding opportunities.</p>
+
+                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.com/e/1270326182809" target="_blank" rel="noopener noreferrer">Register Now</a></div>
+
+                <h3>Building an Online Store Using Shopify - via Zoom </h3>
+                <p>Thursday 5 June 2025, 11am to 12pm BST.</p>
+
+                <p>Modern technology is revolutionising the way businesses operate. And as technology continues to advance, it opens up new opportunities for businesses to innovate and grow. Our workshop is tailored to equip you with the latest strategies for marketing, promoting, and selling your services or products.</p>
+
+                <p>We focus on one potential option to achieve this - Shopify, the ultimate platform for creating and managing your online store! No matter what your level of expertise, we'll introduce you to the platform to get you started.</p>
+                    
+                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.com/e/1270336523739" target="_blank" rel="noopener noreferrer">Register Now</a></div>
+
+                <h2>Past Workshops</h2>
                 <div class="row">
                     <div class="col-6"><div><img src="https://sybiltec.com/images/e-commerce-deep-dive-selling-your-products-online.jpg" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
                     <div class="col-6"><p>On 09 July 2024, Sybil presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Greenwich.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/e-commerce-deep-dive-selling-your-products-online-tickets-899935169317" target="_blank" rel="noopener noreferrer">E-commerce Deep Dive >></a></div></div>
