--- a/services.html
+++ b/services.html
@@ -310,7 +310,7 @@ permalink: /services/
                             <div class="offer-card center">
                                 <i class="fa-solid fa-lock"></i>
                         <h3>Cyber Security</h3>
-                        <p>In 2024, 50% of UK businesses experienced a <a href="https://www.gov.uk/government/statistics/cyber-security-breaches-survey-2024/cyber-security-breaches-survey-2024" target="_blank" rel="noopener noreferrer">cyber breach or attack</a>. Our experts will ensure that your organisation is protected against the latest threats.</p>
+                        <p>43% of businesses experienced a <a href="https://www.gov.uk/government/statistics/cyber-security-breaches-survey-2025/cyber-security-breaches-survey-2025" target="_blank" rel="noopener noreferrer">cyber breach or attack</a> in the last 12 months. Our experts will ensure that your organisation is protected against the latest threats.</p>
                         </div>
                         </div>
                     </div>
