Add IONOS agency partner logo

--- a/index.html
+++ b/index.html
@@ -369,22 +369,26 @@
                 <h2>Our Partners</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-1-7">
                         <img src="https://sybiltec.com/images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates">
                     </div>
-                    <div class="col-2">
+                    <div class="col-1-7">
                         <img src="images/logos/low-res/cyber-access-network.webp" alt="Proud to be part of the Cyber Access Network">
                     </div>
-                    <div class="col-2">
+                    <div class="col-1-7">
                         <img src="images/logos/low-res/designrush-verified-agency.webp" alt="Designrush.com verified agency">
                     </div>
-                    <div class="col-2">
+                    <div class="col-1-7">
                         <img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.webp" alt="Emrys Group International">
                     </div>
-                    <div class="col-2">
+                    <div class="col-1-7">
                         <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="https://sybiltec.com/images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
                     </div>
-                    <div class="col-2">
+                    <div class="col-1-7">
+                        <a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow noreferrer noopener" target="_blank">
+                        <img src="images/logos/ionos-agency-partner-official.svg" alt="IONOS - Official Partner"></a>
+                    </div>
+                    <div class="col-1-7">
                         <img src="https://sybiltec.com/images/logos/low-res/shopify-partners.webp" alt="Shopify Partners">
                     </div>
                 </div>
