--- a/website-design.html
+++ b/website-design.html
@@ -207,9 +207,11 @@ permalink: /website-design/
 
                 <ul>
                     <li>Help with completing templates</li>
-                    <li>10 planning webinars</li>
+                    <li>5 planning webinars</li>
                     <li>Access to an online portal for useful information and resources</li>
                 </ul>
+
+                <p><a href="https://mcusercontent.com/4b107e3c01b79d603c1f09934/files/8f2ed1c7-d3cc-350d-f667-efb7d4cc4877/608195_A5_Talk_Business_Bus_Support_CNT_WEB.pdf" target="_blank" rel="noopener noreferrer">Download the flyer</a> for more information.</p>
 
                 <div class="center padding-top padding-bottom">
                     <h2>How it Works</h2>
@@ -231,6 +233,8 @@ permalink: /website-design/
                     <li>Registered and/or trading in Bexley</li>
                     <li>An SME (0-249 employees)</li>
                 </ul>
+
+                <p>Apply for the programme if your business is based in one of these areas: Albany Park, Barnehurst, Belvedere, Bexley, Bexley Village, Bexleyheath, Blackfen, Blendon, Crayford, Crossness, East Wickham, Erith, Falconwood, Foots Cray, Lamorbey, Northumberland Heath, Sidcup, Slade Green, Thamesmead and Welling.</p>
 
                 </div>
                 </div>
@@ -527,7 +531,7 @@ permalink: /website-design/
 
                 <div class="padding-top">
                     <h2>Web Design Help for non-Bexley Businesses</h2>
-                    <p>Do you need web design or development services but your business is based outside of Bexley? Please see the <a href="https://sybiltec.com/small-business-web-design/">Small Business Web Design</a> page to find out what support is available.</p>
+                    <p>Do you need web design or development services but your business is based outside of <strong>Bexley</strong>? Please see the <a href="https://sybiltec.com/small-business-web-design/">Small Business Web Design</a> page to find out what support is available.</p>
                 </div>
             </div>
         </div>
