--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
                 <div class="row">
                     <div class="col-3"> 
                         <div class="blog-card">   
-                            <a href="https://www.designrush.com/best-designs/websites/one-page" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.designrush.com/best-designs/websites/cnt-associates-website-design" target="_blank" rel="noopener noreferrer">
                                 <img src="images/cnt-associates-400x209.webp" alt="CNT Associates"></a>
                             <div class="blog-card-text">                    
-                                <a href="https://www.designrush.com/best-designs/websites/one-page" class="blog-title" target="_blank" rel="noopener noreferrer">Best One-Page Website Designs of 2025</a>
+                                <a href="https://www.designrush.com/best-designs/websites/cnt-associates-website-design" class="blog-title" target="_blank" rel="noopener noreferrer">Best Website Design of 2025 on DesignRush</a>
                                 <p>18 March 2025</p>
                                 <p>Our work has been selected for <strong>The Best Professional Services Website Designs</strong> by DesignRush.</p>
                             </div>
