--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -118,11 +118,6 @@ permalink: /privacy-notice/
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
-        <div class="announcement-bar">
-            <div class="container-1140">
-                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com?subject=Website Enquiry" target="_blank">info@sybiltec.com</a></span>
-            </div>
-        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -324,10 +319,8 @@ permalink: /privacy-notice/
                         <p><a href="https://sybiltec.com/web-design-surrey/">Web Design in Surrey</a></p>
                     </div>
                     <div class="col-2-4">
-                        <p><strong>Get in Touch</strong></p>
-                            <p><a href="mailto:info@sybiltec.com?subject=Website Enquiry">info@sybiltec.com</a><br>
-                            <a href="tel:+447768059730">+44 (0) 7768 059730</a><br>
-                                <p>The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
+                        <p><strong>Address</strong></p>
+                            <p>The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
                         <p>
                             <a href="https://www.uksmallbusinessdirectory.co.uk/bid/284687/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
                         </p>      
