Add guest posts

--- a/index.html
+++ b/index.html
@@ -357,6 +357,51 @@
             <div class="center padding-bottom padding-top">
                 <a class="btn-secondary" href="https://sybiltec.com/blog/">Read All Blog Articles >></a>   
             </div>
+                        <div class="container-1140 padding-top" id="guest-posts">
+                <div class="center">
+                    <h2>Guest Posts</h2>
+                    <hr>
+                    <p>We regularly write guest posts for our partner organisations on topics including web design, cyber security and online safety.</p>
+                </div>
+                <div class="row">
+                    <div class="col-3"> 
+                        <div class="blog-card">   
+                            <div class="blog-card-text">                    
+                                <a href="https://future-communities.org.uk/world-social-media-day/" class="blog-title" target="_blank" rel="noopener noreferrer">It's World Social Media Day!</a>
+                                <p>30 June 2025</p>
+                                <p>Let's celebrate the platforms that keep us connected online! Learn how to use social media responsibly.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3"> 
+                        <div class="blog-card">   
+                            <div class="blog-card-text">                    
+                                <a href="https://fortis-dpc.com/blog/wordpress-security/" class="blog-title" target="_blank" rel="noopener noreferrer">Securing Your WordPress Website</a>
+                                <p>05 June 2024</p>
+                                <p>A poorly maintained WordPress site is vulnerable. Secure your website with these best practices.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">  
+                        <div class="blog-card">   
+                                <div class="blog-card-text">                      
+                                <a href="https://fortis-dpc.com/blog/website-security/" class="blog-title" target="_blank" rel="noopener noreferrer">Developing a Website Security Strategy</a>
+                                <p>08 May 2025</p>
+                                <p>Research suggests 30,000 websites are hacked every day. Read our advice on how to keep your site protected.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">          
+                        <div class="blog-card">
+                            <div class="blog-card-text">               
+                                <a href="https://thegdprcomplianceconsultancy.co.uk/british-library-cyber-attack-one-year-later/" class="blog-title" target="_blank" rel="noopener noreferrer">The British Library Cyber Attack: One Year Later</a>
+                                <p>07 November 2024</p>
+                                <p>We explore the aftermath of a major cyber attack that affected the British Library in October 2023.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         </div>
         <div class="partners section center grey">
@@ -380,7 +425,7 @@
                         <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="https://sybiltec.com/images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
                     </div>
                     <div class="col-1-7">
-                        <a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow noreferrer noopener" target="_blank">
+                        <a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="noreferrer noopener" target="_blank">
                         <img src="images/logos/ionos-agency-partner-official.svg" alt="IONOS - Official Partner"></a>
                     </div>
                     <div class="col-1-7">
