Update Greenwich workshops

--- a/index.html
+++ b/index.html
@@ -309,6 +309,16 @@
                     <p>Read our selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row">
+                    <div class="col-3">          
+                        <div class="blog-card">
+                            <a href="https://sybiltec.com/free-workshops-greenwich-borough/"><img src="images/person-holding-black-iphone-5-400x209.webp" alt="Person holding black iPhone 5"></a>  
+                            <div class="blog-card-text">               
+                                <a href="https://sybiltec.com/free-workshops-greenwich-borough/" class="blog-title">Free Workshops for Greenwich Businesses</a>
+                                <p>18 July 2025</p>
+                                <p>We are running free workshops and webinars to support Greenwich based businesses and non-profits.</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-3"> 
                         <div class="blog-card">   
                             <a href="https://www.designrush.com/best-designs/websites/cnt-associates-website-design" target="_blank" rel="noopener noreferrer">
@@ -339,16 +349,6 @@
                                 <a href="https://sybiltec.com/website-compliance-quick-guide/" class="blog-title">A Quick Guide to Website Compliance</a>
                                 <p>05 June 2024</p>
                                 <p>What is website compliance? Read our quick guide to find out what is legally required on your website.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3">          
-                        <div class="blog-card">
-                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business/"><img src="images/person-holding-black-iphone-5-400x209.webp" alt="Person holding black iPhone 5"></a>  
-                            <div class="blog-card-text">               
-                                <a href="https://sybiltec.com/cyber-security-best-practices-for-business/" class="blog-title">Cyber Security Best Practices for Business</a>
-                                <p>19 May 2024</p>
-                                <p>Cyber security is a top priority for your organisation. Read our guide on how to stay protected.</p>
                             </div>
                         </div>
                     </div>
