--- a/training.html
+++ b/training.html
@@ -179,21 +179,33 @@ permalink: /training/
 
                 <h2>Upcoming Events</h2>
 
-                <h3>Funding & Opportunities for E-commerce - via Zoom</h3>
-                <p>Wednesday 14 May 2025, 11am to 12pm BST.</p>
+                <h3>Developing a Digital Marketing Strategy for Your Business</h3>
+                <p>Thursday 16 October 2025, 11am to 12pm BST.</p>
 
-                <p>Join our online workshop to gain insights into various sources of funding and potential grants, loans and other opportunities that can help you grow your business. In this workshop you will learn about e-commerce platforms and gain awareness and knowledge on how to identify areas for development. You will also be equipped with the necessary tools to identify potential sources of funding and learn more about funding opportunities.</p>
+                <p>You've got a brilliant business idea. You've set up a website or online shop and you're ready to start selling your products/services. Marketing your business effectively is an essential step for gaining exposure to the right audience and start making sales. Join our free webinar to learn how to develop a marketing strategy for your business. We will cover the main digital marketing methods.</p>
 
-                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.com/e/1270326182809" target="_blank" rel="noopener noreferrer">Register Now</a></div>
+                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/developing-a-digital-marketing-strategy-free-via-zoom-tickets-1381827195339" target="_blank" rel="noopener noreferrer">Register Now</a></div>
 
-                <h3>Building an Online Store Using Shopify - via Zoom </h3>
-                <p>Thursday 5 June 2025, 11am to 12pm BST.</p>
+                <h3>Support for Women-Led Businesses</h3>
+                <p>Thursday 6 November 2025, 11am to 12pm BST.</p>
 
-                <p>Modern technology is revolutionising the way businesses operate. And as technology continues to advance, it opens up new opportunities for businesses to innovate and grow. Our workshop is tailored to equip you with the latest strategies for marketing, promoting, and selling your services or products.</p>
+                <p>This free Zoom webinar will cover a number of issues relevant to women-led businesses including:</p>
 
-                <p>We focus on one potential option to achieve this - Shopify, the ultimate platform for creating and managing your online store! No matter what your level of expertise, we'll introduce you to the platform to get you started.</p>
+                <ul>
+                    <li>Funding for women-led businesses</li>
+                    <li>Leadership and management issues</li>
+                    <li>Personal perspectives on running a business from guest speakers</li>
+                    <li>Wellbeing and work-life balance</li>
+                </ul>
                     
-                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.com/e/1270336523739" target="_blank" rel="noopener noreferrer">Register Now</a></div>
+                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/support-for-women-led-businesses-free-via-zoom-tickets-1381828158219" target="_blank" rel="noopener noreferrer">Register Now</a></div>
+
+                <h3>AI for Beginners</h3>
+                <p>Wednesday 19 November 2025, 11am to 12pm BST.</p>
+
+                <p>This is a general introduction to AI which assumes no previous knowledge. We will look at and review current developments in AI and how these can be utilised and leveraged to support your business.</p>
+                    
+                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/ai-for-beginners-free-via-zoom-tickets-1381832591479" target="_blank" rel="noopener noreferrer">Register Now</a></div>
 
                 <h2>Past Workshops</h2>
                 <div class="row">
