--- a/blog-2.html
+++ b/blog-2.html
@@ -98,7 +98,7 @@ permalink: /blog-2/
         "@type": "Organization",
         "image": "https://sybiltec.com/images/logos/sybiltec-logo-social.png",
         "url": "https://www.sybiltec.com",
-        "sameAs": ["https://www.pinterest.co.uk/sybiltec/", "https://www.facebook.com/sybiltec", "https://www.linkedin.com/company/sybiltec/", "https://x.com/sybiltec", "https://www.instagram.com/sybiltec", "https://www.youtube.com/@sybiltec"],
+        "sameAs": ["https://uk.pinterest.com/sybiltec/", "https://www.facebook.com/sybiltec", "https://www.linkedin.com/company/sybiltec/", "https://x.com/sybiltec", "https://www.instagram.com/sybiltec", "https://www.youtube.com/@sybiltec"],
         "logo": "https://sybiltec.com/favicon.png",
         "name": "Sybiltec Web Design",
         "description": "Sybiltec provides web design services to small businesses in the South East London region and surrounding areas. Whether you are looking to build your first website or redesign an existing one, we offer a service that's right for you. Services include: small business websites, e-commerce websites and online learning platforms. We work with Shopify, WordPress, Wix, WooCommerce and LearnDash.",
@@ -290,9 +290,9 @@ permalink: /blog-2/
                 </div>
             </div>
             <div class="container-1140 center padding-top padding-bottom">
-                <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/sybil-m/" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://www.pinterest.co.uk/sybiltec/" target="_blank" rel="noopener noreferrer">
+                <a href="https://uk.pinterest.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-pinterest"></i></a>
                 <a href="https://www.facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-facebook"></i></a>
