--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                 <a href="https://sybiltec.com/free-workshops-greenwich-borough/" class="blog-title">Free Workshops for Greenwich Businesses</a>
                                 <p>18 July 2025</p>
                                 <p>We are running free workshops and webinars to support Greenwich based businesses and non-profits.</p>
-                                <a class="btn-secondary" href="https://sybiltec.com/free-workshops-greenwich-borough/">Read more >></a>
+                                <a class="btn-secondary" href="https://sybiltec.com/free-workshops-greenwich-borough/">Free Workshops >></a>
                             </div>
                         </div>
                     </div>
@@ -328,7 +328,7 @@
                                 <a href="https://www.designrush.com/best-designs/websites/cnt-associates-website-design" class="blog-title" target="_blank" rel="noopener noreferrer">Best Website Design of 2025 on DesignRush</a>
                                 <p>18 March 2025</p>
                                 <p>Our work has been selected for <strong>The Best Professional Services Website Designs</strong> by DesignRush.</p>
-                                <a class="btn-secondary" href="https://www.designrush.com/best-designs/websites/cnt-associates-website-design" target="_blank" rel="noopener noreferrer">Read more >></a>
+                                <a class="btn-secondary" href="https://www.designrush.com/best-designs/websites/cnt-associates-website-design" target="_blank" rel="noopener noreferrer">2025 Best Designs >></a>
                             </div>
                         </div>
                     </div>
@@ -341,7 +341,7 @@
                                 <a href="https://sybiltec.com/strategies-for-business-success/" class="blog-title">Smart Strategies for Small Business Success</a>
                                 <p>18 June 2024</p>
                                 <p>We explore the critical strategies that transform your website into a robust platform for growth.</p>
-                                <a class="btn-secondary" href="https://sybiltec.com/strategies-for-business-success/">Read more >></a>
+                                <a class="btn-secondary" href="https://sybiltec.com/strategies-for-business-success/">Smart Strategies >></a>
                             </div>
                         </div>
                     </div>
@@ -352,7 +352,7 @@
                                 <a href="https://sybiltec.com/website-compliance-quick-guide/" class="blog-title">A Quick Guide to Website Compliance</a>
                                 <p>05 June 2024</p>
                                 <p>What is website compliance? Read our quick guide to find out what is legally required on your website.</p>
-                                <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Read more >></a>
+                                <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Website Compliance >></a>
                             </div>
                         </div>
                     </div>
@@ -374,7 +374,7 @@
                                 <a href="https://future-communities.org.uk/world-social-media-day/" class="blog-title" target="_blank" rel="noopener noreferrer">It's World Social Media Day!</a>
                                 <p>30 June 2025</p>
                                 <p>Let's celebrate the platforms that keep us connected online! Learn how to use social media responsibly.</p>
-                                <a class="btn-secondary" href="https://future-communities.org.uk/world-social-media-day/" target="_blank" rel="noopener noreferrer">Read more >></a>
+                                <a class="btn-secondary" href="https://future-communities.org.uk/world-social-media-day/" target="_blank" rel="noopener noreferrer">World Social Media Day >></a>
                             </div>
                         </div>
                     </div>
@@ -384,7 +384,7 @@
                                 <a href="https://fortis-dpc.com/blog/wordpress-security/" class="blog-title" target="_blank" rel="noopener noreferrer">Securing Your WordPress Website</a>
                                 <p>05 June 2024</p>
                                 <p>A poorly maintained WordPress site is vulnerable. Secure your website with these best practices.</p>
-                                <a class="btn-secondary" href="https://fortis-dpc.com/blog/wordpress-security/" target="_blank" rel="noopener noreferrer">Read more >></a>
+                                <a class="btn-secondary" href="https://fortis-dpc.com/blog/wordpress-security/" target="_blank" rel="noopener noreferrer">WordPress Security >></a>
                             </div>
                         </div>
                     </div>
@@ -394,7 +394,7 @@
                                 <a href="https://fortis-dpc.com/blog/website-security/" class="blog-title" target="_blank" rel="noopener noreferrer">Developing a Website Security Strategy</a>
                                 <p>08 May 2025</p>
                                 <p>Research suggests 30,000 websites are hacked every day. Read our advice on how to keep your site protected.</p>
-                                <a class="btn-secondary" href="https://fortis-dpc.com/blog/website-security" target="_blank" rel="noopener noreferrer">Read more >></a>
+                                <a class="btn-secondary" href="https://fortis-dpc.com/blog/website-security" target="_blank" rel="noopener noreferrer">Website Security >></a>
                             </div>
                         </div>
                     </div>
@@ -404,7 +404,7 @@
                                 <a href="https://thegdprcomplianceconsultancy.co.uk/british-library-cyber-attack-one-year-later/" class="blog-title" target="_blank" rel="noopener noreferrer">The British Library Cyber Attack: One Year Later</a>
                                 <p>07 November 2024</p>
                                 <p>We explore the aftermath of a major cyber attack that affected the British Library in October 2023.</p>
-                                <a class="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk/british-library-cyber-attack-one-year-later/" target="_blank" rel="noopener noreferrer">Read more >></a>
+                                <a class="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk/british-library-cyber-attack-one-year-later/" target="_blank" rel="noopener noreferrer">Cyber Attack >></a>
                             </div>
                         </div>
                     </div>
